--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,7 @@ spring:
       names: ${job.name:NONE}
 
 logging.level.org.springframework.batch: DEBUG
+logging.level.org.org.hibernate.SQL: debug
 
 ---
 spring:
@@ -33,6 +34,9 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       format_sql: true
+      show_sql: true
       ddl-auto: validate
 
-logging.level.org.springframework.batch: DEBUG
+logging.level:
+  org.springframework.batch: DEBUG
+  org.hibernate.SQL: debug
